# B6B36PJC

./: .gitignore  README.md
TINY_00/: tiny-00.cpp
TINY_01/: tiny-01.cpp
TINY_02/: tests-tiny-02.cpp  tiny-02.cpp
TINY_03/: tiny-03.cpp
TINY_04/: tiny-04.cpp
TINY_05/: tiny-05.cpp  tiny-05.hpp
TINY_06/: tiny-06.cpp  tiny-06.hpp
TINY_07/: tiny-07.cpp  tiny-07.hpp
TINY_08/: tiny-08.hpp
cv8/: CMakeLists.txt  main.cpp
cviceni_9_init/: CMakeLists.txt  main.cpp
trie/: trie.cpp
trie_test/: trie.cpp
